@@ -717,6 +717,12 @@ CollectionDB::fetchCover( QObject* parent, const QString& key ) //SLOT
 }
 
 
+void
+CollectionDB::stopScan() //SLOT
+{
+    CollectionReader::stop();
+}
+
 //////////////////////////////////////////////////////////////////////////////////////////
 // PRIVATE SLOTS
 //////////////////////////////////////////////////////////////////////////////////////////
